refactor Plugin Entry