@@ -1,7 +1,7 @@
 package com.lemonlightmc.minecicd;
 
 import com.sun.net.httpserver.HttpServer;
-import org.apache.commons.io.FileUtils;
+
 import org.bukkit.Bukkit;
 import org.bukkit.boss.BarColor;
 import org.bukkit.boss.BarStyle;
@@ -9,7 +9,6 @@ import org.bukkit.boss.BossBar;
 import org.bukkit.configuration.InvalidConfigurationException;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
-import org.bukkit.plugin.Plugin;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitTask;
 import org.eclipse.jgit.api.Git;
@@ -20,6 +19,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.InetSocketAddress;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -28,56 +28,29 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 public final class MineCICD extends JavaPlugin {
-    public static FileConfiguration config;
-    public static Logger logger = Logger.getLogger("MineCICD");
-    public static Plugin plugin;
-    public static HttpServer webServer;
-    public static HashMap<String, BossBar> busyBars = new HashMap<>();
-    public static boolean busyLock = false;
+    public FileConfiguration config;
+    public static MineCICD instance;
+    public HttpServer webServer;
+    public HashMap<String, BossBar> busyBars = new HashMap<>();
+    public boolean busyLock = false;
 
     @Override
     public void onEnable() {
-        plugin = this;
+        instance = this;
         saveDefaultConfig();
         config = getConfig();
 
-        if (config.get("repository-url") != null) {
-            final File configFile = new File(getDataFolder(), "config.yml");
-            configFile.renameTo(new File(getDataFolder(), "config_old.yml"));
+        GitUtils.loadGitIgnore();
+        Messages.loadMessages();
+        Script.loadDefaultScript();
 
-            final File messagesFile = new File(getDataFolder(), "messages.yml");
-            messagesFile.renameTo(new File(getDataFolder(), "messages_old.yml"));
-
-            // delete all files in the data folder except for the old config and messages
-            // files
-            final File[] files = getDataFolder().listFiles();
-            if (files != null) {
-                for (final File file : files) {
-                    if (!file.getName().equals("config_old.yml") && !file.getName().equals("messages_old.yml")) {
-                        FileUtils.deleteQuietly(file);
-                    }
-                }
-            }
-
-            try {
-                reload();
-                Migration.migrate();
-            } catch (final Exception e) {
-                throw new RuntimeException(e);
-            }
-        } else {
-            GitUtils.loadGitIgnore();
-            Messages.loadMessages();
-            Script.loadDefaultScript();
-
-            try {
-                GitSecret.configureGitSecretFiltering(GitSecret.readFromSecretsStore());
-            } catch (IOException | InvalidConfigurationException | InterruptedException e) {
-                throw new RuntimeException(e);
-            }
-
-            setupWebHook();
+        try {
+            GitSecret.configureGitSecretFiltering(GitSecret.readFromSecretsStore());
+        } catch (IOException | InvalidConfigurationException | InterruptedException e) {
+            throw new RuntimeException(e);
         }
+
+        setupWebHook();
 
         Objects.requireNonNull(this.getCommand("minecicd")).setExecutor(new BaseCommand());
         Objects.requireNonNull(this.getCommand("minecicd")).setTabCompleter(new BaseCommandTabCompleter());
@@ -87,45 +60,39 @@ public final class MineCICD extends JavaPlugin {
         }
     }
 
-    public static void setupWebHook() {
+    public void setupWebHook() {
         final int port = config.getInt("webhooks.port");
         final String path = config.getString("webhooks.path");
-        if (port != 0) {
+        if (port == 0) {
+            stopWebHookServer();
+        }
+        try {
+            stopWebHookServer();
+
+            String serverIp;
             try {
-                if (webServer != null) {
-                    webServer.stop(0);
-                    webServer = null;
-                }
-
-                String serverIp;
-                try {
-                    final URL whatismyip = new URL("https://checkip.amazonaws.com");
-                    final BufferedReader in = new BufferedReader(new InputStreamReader(whatismyip.openStream()));
-                    serverIp = in.readLine();
-                } catch (final IOException e) {
-                    throw new RuntimeException(e);
-                }
-
-                webServer = HttpServer.create(new InetSocketAddress(port), 0);
-                webServer.createContext("/" + path, new WebhookHandler());
-                webServer.setExecutor(null);
-                webServer.start();
-
-                log("MineCICD is now listening on: \"http://" + serverIp + ":" + port + "/" + path + "\"", Level.INFO);
+                final URL whatismyip = URI.create("https://checkip.amazonaws.com").toURL();
+                final BufferedReader in = new BufferedReader(new InputStreamReader(whatismyip.openStream()));
+                serverIp = in.readLine();
             } catch (final IOException e) {
-                logError(e);
+                throw new RuntimeException(e);
             }
-        } else {
-            if (webServer != null) {
-                webServer.stop(0);
-                webServer = null;
-            }
+
+            webServer = HttpServer.create(new InetSocketAddress(port), 0);
+            webServer.createContext("/" + path, new WebhookHandler());
+            webServer.setExecutor(null);
+            webServer.start();
+
+            getLogger().log(Level.INFO,
+                    "MineCICD is now listening on: \"http://" + serverIp + ":" + port + "/" + path + "\"");
+        } catch (final IOException e) {
+            logError(e);
         }
     }
 
-    public static void reload()
+    public void reload()
             throws GitAPIException, IOException, InvalidConfigurationException, InterruptedException {
-        plugin.saveDefaultConfig();
+        instance.saveDefaultConfig();
 
         for (final String type : busyBars.keySet()) {
             removeBar(type, 0);
@@ -146,62 +113,81 @@ public final class MineCICD extends JavaPlugin {
             removeBar(type, 0);
         }
 
-        if (webServer != null) {
-            webServer.stop(0);
-            log("MineCICD stopped listening.", Level.INFO);
+        if (stopWebHookServer()) {
+            getLogger().log(Level.INFO, "MineCICD stopped listening.");
         }
     }
 
-    public static void log(final String l, final Level level) {
-        logger.log(level, l);
+    public static MineCICD instance() {
+        if (instance == null) {
+            throw new IllegalStateException("Instance has not been initialized yet");
+        }
+        return instance;
     }
 
-    public static void logError(final Exception e) {
-        logger.log(Level.SEVERE, e.getMessage(), e);
+    public static Logger logger() {
+        return instance().getLogger();
+    }
+
+    public boolean stopWebHookServer() {
+        if (webServer != null) {
+            try {
+                webServer.stop(0);
+            } catch (final Exception ignored) {
+                return false;
+            }
+            webServer = null;
+            return true;
+        }
+        return false;
+    }
+
+    public void logError(final Exception e) {
+        getLogger().log(Level.SEVERE, e.getMessage(), e);
         final StringBuilder stackTrace = new StringBuilder();
         for (final StackTraceElement element : e.getStackTrace()) {
             stackTrace.append(element.toString()).append("\n");
         }
-        logger.log(Level.SEVERE, stackTrace.toString());
+        getLogger().log(Level.SEVERE, stackTrace.toString());
     }
 
-    public static String addBar(final String title, final BarColor color, final BarStyle style) {
+    public String addBar(final String title, final BarColor color, final BarStyle style) {
         if (!Config.getBoolean("bossbar.enabled"))
             return "";
         final String random = String.valueOf(System.currentTimeMillis());
 
-        MineCICD.busyBars.put(random, Bukkit.createBossBar(title, color, style));
+        busyBars.put(random, Bukkit.createBossBar(title, color, style));
 
         final ArrayList<Player> players = new ArrayList<>(Bukkit.getOnlinePlayers());
         players.removeIf(player -> !player.hasPermission("minecicd.notify"));
 
         for (final Player player : players) {
-            MineCICD.busyBars.get(random).addPlayer(player);
+            busyBars.get(random).addPlayer(player);
         }
 
         return random;
     }
 
-    public static void changeBar(final String type, final String title, final BarColor color, final BarStyle style) {
+    public void changeBar(final String type, final String title, final BarColor color, final BarStyle style) {
         if (!Config.getBoolean("bossbar.enabled"))
             return;
-        if (!MineCICD.busyBars.containsKey(type))
+        if (!busyBars.containsKey(type))
             return;
 
-        MineCICD.busyBars.get(type).setTitle(title);
-        MineCICD.busyBars.get(type).setColor(color);
-        MineCICD.busyBars.get(type).setStyle(style);
+        busyBars.get(type).setTitle(title);
+        busyBars.get(type).setColor(color);
+        busyBars.get(type).setStyle(style);
     }
 
-    public static void removeBar(final String type, final int delay) {
+    public void removeBar(final String type, final int delay) {
         if (!Config.getBoolean("bossbar.enabled"))
             return;
-        if (!MineCICD.busyBars.containsKey(type))
+        if (!busyBars.containsKey(type))
             return;
 
         if (delay > 0) {
-            final BossBar bar = MineCICD.busyBars.get(type);
-            final BukkitTask task = Bukkit.getScheduler().runTaskTimer(MineCICD.plugin, () -> {
+            final BossBar bar = busyBars.get(type);
+            final BukkitTask task = Bukkit.getScheduler().runTaskTimer(this, () -> {
                 double currentProgress = bar.getProgress();
                 currentProgress -= (1.0 / (double) delay);
                 if (currentProgress < 0) {
@@ -209,14 +195,14 @@ public final class MineCICD extends JavaPlugin {
                 }
                 bar.setProgress(currentProgress);
             }, 1, 1);
-            Bukkit.getScheduler().runTaskLater(MineCICD.plugin, () -> {
-                MineCICD.busyBars.get(type).removeAll();
-                MineCICD.busyBars.remove(type);
+            Bukkit.getScheduler().runTaskLater(this, () -> {
+                busyBars.get(type).removeAll();
+                busyBars.remove(type);
                 task.cancel();
             }, delay);
         } else {
-            MineCICD.busyBars.get(type).removeAll();
-            MineCICD.busyBars.remove(type);
+            busyBars.get(type).removeAll();
+            busyBars.remove(type);
         }
     }
 }
